@@ -1,3 +1,8 @@
+2005-06-02  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/proctable.c: (update_info): Removed useless code. I forgot to
+	clean this when i fixed #305060.
+
 2005-06-01  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/proctable.c: (update_info): Fixed process sort.
